# yeolib

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md  clean-all.sh
resources/: SimpleVertexShader.vertexshader
vm/: Vagrantfile
yeoio/: CMakeLists.txt
yeoio/include/yeo/: io.hpp
yeoio/src/: io.cpp
yeomath/: CMakeLists.txt
yeomath/include/yeo/: math.hpp
yeomath/src/: math.cpp
yeorenderer/: CMakeLists.txt  README.md
yeorenderer/examples/: CMakeLists.txt  simple.cpp
yeorenderer/include/yeo/: renderer.hpp
yeorenderer/resources/: blinnphong.vs.glsl
yeorenderer/src/: renderer.cpp
